--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -6,7 +6,7 @@
 @font-face {
   font-family: 'Inter';
   src: url('../fonts/Inter-Regular.ttf') format('truetype'),
-  url('../fonts/Inter-Medium.ttf') format('truetype')
+    url('../fonts/Inter-Medium.ttf') format('truetype');
 }
 
 * {
@@ -55,7 +55,7 @@
 .control-button {
   border: none;
   padding: 2px 10px 0 10px;
-  transition: background-color .3s;
+  transition: background-color 0.3s;
   background-color: transparent;
 }
 
