--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -77,5 +77,7 @@
   display: block;
   width: 100vw;
   border: none;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   height: calc(100vh - var(--title-bar-height));
 }
